fix(next-storage): honor model set semantics
Make model equality and hashing follow the Set contract, and report duplicate storage insertions as unchanged. Also keep storage query snapshots immutable and document the live-service serialization boundary.